modules/lib/common/src/main/scala/com/example/common/domain/error/AppError.scala
package com.example.common.domain.error

trait AppError {
  def message: String
}
